<resources>
    <string name="app_name">Dulhan Beauty Parlor</string>
    <string name="welcome">Welcome,</string>
    <string name="sign_in_to_your_account">sign in to your account!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="skip">Skip</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_user_name">Enter your User name</string>
    <string name="create_an_account">Create an account</string>
    <string name="enter_your_password">Enter your PassWord</string>
    <string name="enter_your_confirm_passwrd">Enter your Confirm PassWrd</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_username">Enter UserName</string>
    <string name="email_error">Enter Email</string>
    <string name="email_username">Enter Username</string>
    <string name="email_mobilenumber">Enter Mobile Number</string>
    <string name="email_mobileTenDigit">Enter 10 digit Mobile Number</string>
    <string name="enter_same_password">Enter Same Password</string>
    <string name="error_invalid_email">Enter Valid Email</string>
    <string name="password_error">Enter PassWord</string>
    <string name="error_invalid_password">Enter Valid PassWord</string>
    <string name="enter_min_digit">Enter Password minimum 6 digit</string>
    <string name="enter_valid_data">Enter valid Data</string>
    <string name="password_is_too_weak">Password is too weak</string>
    <string name="password_does_not_match">PassWord Does not match</string>
    <string name="skip_arrow"><![CDATA[Skip >>]]></string>
    <string name="home">Home</string>
    <string name="tips">Tips</string>
    <string name="booking">Booking</string>
    <string name="services">Services</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_upto_50_off">Get Upto 50% off</string>
    <string name="about_us">About us</string>
    <string name="appoinment">Appoinment</string>
    <string name="our_experts">Our experts</string>
    <string name="reviews">Reviews</string>
    <string name="feedback">Feedback</string>
    <string name="log_out">Log Out</string>
    <string name="special_offer">Special Offer</string>
    <string name="hair_specialist">Hair Specialist</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="make_up_artist">Make up Artist</string>
    <string name="hair_style">Hair Style</string>
    <string name="nail_art">Nail Art</string>
    <string name="name">Name</string>
    <string name="enter_your_email_user_name">Enter your Email / User name</string>
    <string name="leave_a_message">Leave a Message</string>
    <string name="submit">Submit</string>
    <string name="rate_us">Rate Us</string>
    <string name="portfolio">Portfolio</string>
    <string name="tip_name">Tip Name</string>
    <string name="book_an_appoinment">Book an Appoinment</string>
    <string name="artist_list">Artist List</string>
    <string name="date">Date</string>
</resources>