<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_aboutus"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_appoinment"
            android:icon="@drawable/ic_appoinment"
            android:title="@string/appoinment" />
        <item
            android:id="@+id/nav_our_experts"
            android:icon="@drawable/ic_our_expert"
            android:title="@string/our_experts" />
        <item
            android:id="@+id/nav_reviews"
            android:icon="@drawable/ic_review"
            android:title="@string/reviews" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />

    </group>
</menu>