<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_drawer">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/bd_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/bd_services"
            android:icon="@drawable/services"
            android:title="@string/services" />
        <item
            android:id="@+id/bd_portfolio"
            android:icon="@drawable/ic_appoinment"
            android:title="@string/portfolio" />
        <item
            android:id="@+id/bd_tips"
            android:icon="@drawable/ic_aboutus"
            android:title="@string/tips" />

    </group>
</menu>