<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/white"
            android:visibility="gone"
             />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_50dp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dimens_150dp"
                android:layout_height="@dimen/dimens_150dp"
                android:layout_gravity="center"
                android:src="@mipmap/logo" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_50dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimens_30dp"
                android:layout_marginEnd="@dimen/dimens_30dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/welcome"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimens_24sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/sign_in_to_your_account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimens_18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimens_50dp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_emailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:imeOptions="actionNext"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="@dimen/dimens_10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/enter_your_email_user_name"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:maxLines="1"
                    android:textSize="@dimen/dimens_18sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_pwd"
                    android:layout_width="match_parent"
                    android:imeOptions="actionDone"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_10dp"
                    android:backgroundTint="@color/white"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/dimens_10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/enter_your_password"
                    android:maxLength="12"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="textPassword"
                    android:textSize="@dimen/dimens_18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/dimens_10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimens_18sp"
                    tools:ignore="RtlHardcoded" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimens_30dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_signin_bg"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimens_18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimens_20dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimens_18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimens_24sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimens_30dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/skip"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimens_18sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>
</androidx.appcompat.widget.LinearLayoutCompat>