<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".activity.SignUpActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_50dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dimens_150dp"
            android:layout_height="@dimen/dimens_150dp"
            android:layout_gravity="center"
            android:src="@mipmap/logo" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_50dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimens_30dp"
            android:layout_marginEnd="@dimen/dimens_30dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/create_an_account"
                android:textColor="@color/white"
                android:textSize="@dimen/dimens_24sp"
                android:textStyle="bold" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_30dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="@dimen/dimens_10dp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/enter_your_user_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/dimens_18sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/dimens_10dp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/enter_your_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/dimens_18sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_mobilenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="@dimen/dimens_10dp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/enter_your_mobile_number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/dimens_18sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/dimens_10dp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/enter_your_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="12"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/dimens_18sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/dimens_10dp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/enter_your_confirm_passwrd"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="12"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/dimens_18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_30dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_signin_bg"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/dimens_18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimens_20dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/already_have_an_account"
                android:textColor="@color/white"
                android:textSize="@dimen/dimens_18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/dimens_24sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>