<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:elevation="@dimen/dimens_10dp"
        app:cardCornerRadius="@dimen/dimens_10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background"
            android:orientation="vertical"
            android:padding="@dimen/dimens_30dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_title_dilog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:fontFamily="@font/montserrat_regular"
                android:padding="@dimen/dimens_5dp"
                android:text="@string/hair_specialist"
                android:textColor="@color/white"
                android:textSize="@dimen/dimens_16sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_30dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginRight="@dimen/dimens_10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_signin_bg"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimens_14sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_ok"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/dimens_10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_signin_bg"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimens_14sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>