<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".activity.OurExpertsActivity">

    <include layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimens_20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_expert_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:padding="@dimen/dimens_5dp"
                android:text="@string/make_up_artist"
                android:textColor="@color/white"
                android:textSize="@dimen/dimens_18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/makeup_artist_recycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_hair_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:padding="@dimen/dimens_5dp"
                android:text="@string/hair_style"
                android:textColor="@color/white"
                android:textSize="@dimen/dimens_18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hair_style_recycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_nail_art"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:padding="@dimen/dimens_5dp"
                android:text="@string/nail_art"
                android:textColor="@color/white"
                android:textSize="@dimen/dimens_18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/nail_art_recycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>